fixed issue with footer not sticking to bottomon pages with less content, fixed 3dmodel canvas width overflowing on mobile

--- a/3dapp/assignment/app/css/custom.css
+++ b/3dapp/assignment/app/css/custom.css
@@ -3,15 +3,20 @@
     src: url(../assets/fonts/loki_cola/LOKICOLA.TTF)
 }
 
-#body_dark {
-      background-color: white;
+html {
+      height: 100%;
+}
+
+body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100%;
 }
 
 .row {
       max-width: 100%;
       margin-left: 0px;
       margin-right: 0px;
-
 }
 
 .main_contents {
@@ -116,8 +121,8 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
-.card#gallery {
-      margin-bottom: 10px;
+.card #gallery {
+      margin-bottom: 20px;
       margin-left: 10px;
       /* margin-right: 10px; */
 }
@@ -151,10 +156,12 @@ h1, h2, h3, h4, h5, h6 {
       border-width: 0px;
 }
 
+
+
 .x3dom-canvas {
       cursor: grab;
       height: 400px;
-      width: 500px;
+      width: 90%;
       background-color: #ffffff;
 }
 
@@ -257,6 +264,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer {
+      margin-top: auto;
       background-color: #000000;
       height: 50px;
       position:static;
@@ -272,10 +280,8 @@ h1, h2, h3, h4, h5, h6 {
       text-decoration: none;
 }
 .copyright {
-      padding-top: 0px;
-}
-.social {
-      padding-top: 0px;
+      font-family: proxima-nova, sans-serif;;
+      color: rgb(255, 255, 255);
 }
 
 #aboutPage {
